# rtt_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  requirements.txt
crates/common/: Cargo.toml
crates/common/src/: kalman_filter.rs  lib.rs  pos_vel_filter_1d.rs  pos_vel_filter_2d.rs
crates/core/: Cargo.toml
crates/core/src/: angle.rs  lib.rs  pos_vel_filter_1d.rs  vector2.rs
crates/dependency_graph/: Cargo.toml
crates/dependency_graph/src/: main.rs
crates/networking/: Cargo.toml
crates/observer/: Cargo.toml
crates/observer/src/: main.rs  observer.rs  processor.rs  ssl_receivers.rs
crates/observer/src/filters/: camera_object_filter.rs  mod.rs
crates/observer/src/filters/referee/: mod.rs  referee_filter.rs
crates/observer/src/filters/vision/: camera.rs  geometry_filter.rs  mod.rs  vision_filter.rs  world_filter.rs
crates/observer/src/filters/vision/ball/: ball_filter.rs  ball_observation.rs  camera_ground_ball_filter.rs  filtered_ball.rs  mod.rs
crates/observer/src/filters/vision/robot/: camera_robot_filter.rs  filtered_robot.rs  mod.rs  robot_feedback.rs  robot_filter.rs  robot_observation.rs  robot_orientation_filter.rs  robot_properties.rs
crates/observer/src/parameters/: mod.rs  robot_parameter_database.rs  robot_parameters.rs
crates/protos/: Cargo.toml  build.rs
crates/rtt_models/: Cargo.toml
crates/rtt_networking/: Cargo.toml  README.md
crates/rtt_observer/: Cargo.toml
crates/rtt_observer/src/: main.rs
crates/rtt_protos/: Cargo.toml
docker/: README.md  compose.full.yml  compose.minimal.yml  compose.standard.yml
(+12 files in other folders)
