[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
color-eyre = "0.6.3"
core = { path = "../core" }
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
nalgebra = "0.33.2"
networking = { path = "../networking" }
protos = { path = "../protos" }
tokio = { version = "1.43.0", features = ["rt", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
