[package]
name = "rtt_observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
color-eyre = "0.6.3"
futures = "0.3.31"
rtt_networking = { path = "../rtt_networking" }
rtt_protos = { path = "../rtt_protos" }
tokio = { version = "1.43.0", features = ["rt", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
